--- a/src/main/resources/templates/allegati/allegatiEdit.html
+++ b/src/main/resources/templates/allegati/allegatiEdit.html
@@ -5,7 +5,7 @@
 <head lang="it">
 </head>
 <body>
-	<div layout:fragment="content" th:with="counter=${allegatiWrapper.idOffset - 1}">
+	<div layout:fragment="content" th:with="counter=${accreditamentoAllegatiWrapper.idOffset - 1}">
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -18,74 +18,74 @@
 						<form id="formAccreditamento" class="form-horizontal form-label-left" th:action="@{|/accreditamento/${accreditamentoId}/dati/save|}"
 								method="post" enctype="multipart/form-data" novalidate="novalidate">
 							
-<!-- 							<input type="hidden" name="editId" th:value="${allegatiWrapper.allegati.id}" /> -->
-							<input type="hidden" th:field="${allegatiWrapper.accreditamentoId}" /> 
-							<input type="hidden" th:field="${allegatiWrapper.idEditabili}" />
-							<input type="hidden" th:field="${allegatiWrapper.idOffset}" />	
+							<input type="hidden" name="editId" th:value="${accreditamentoAllegatiWrapper.provider}" />
+							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.accreditamentoId}" /> 
+							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.idEditabili}" />
+							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.idOffset}" />	
 							
 							<!-- allegato 1 (atto costitutivo e statuto) -->
-							<th:block th:include="fragments/allegati :: allegati(allegatiWrapper, attoCostitutivo, ${++counter}, null)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, attoCostitutivo, ${++counter}, null)" ></th:block>
 							<div class="row">
 								<label th:text="#{label.esempio}"
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_attoCostitutivo">esempio attoCostitutivo</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_attoCostitutivo">
-									<a id="attoCostitutivo_esempio_link" th:text="#{}" th:href="${LINK ESEMPIO ATTOCOSTITUTIVO}"></a>
+									<a id="attoCostitutivo_esempio_link" th:text="#{attoCostitutivo}" th:href="files/${accreditamentoWrapper.attoCostitutivoModel}"></a>
 								</div>
 							</div>
 														
 							<!-- allegato 2 (esperienza formazione in ambito sanitario) -->
-							<th:block th:include="fragments/allegati :: allegati(allegatiWrapper, esperienzaFormazione, ${++counter}, null)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, esperienzaFormazione, ${++counter}, null)" ></th:block>
 							<div class="row">
 								<label th:text="#{label.esempio}"
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_esperienzaFormazione">esempio esperienzaFormazione</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_esperienzaFormazione">
-									<a id="esperienzaFormazione_esempio_link" th:href="${LINK ESEMPIO ESPERIENZAFORMAZIONE}"></a>
+									<a id="esperienzaFormazione_esempio_link" th:text="#{esperienzaFormazione}" th:href="files/${accreditamentoWrapper.esperienzaFormazioneModel}"></a>
 								</div>
 							</div>
 							
 							<!-- allegato 3 (utilizzo di sedi, strutture ed attrezzature di altro soggetto) -->
-							<th:block th:include="fragments/allegati :: allegati(allegatiWrapper, utilizzo, ${++counter}, null)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, utilizzo, ${++counter}, null)" ></th:block>
 							<div class="row">
 								<label th:text="#{label.esempio}"
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_utilizzo">esempio utilizzo</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_utilizzo">
-									<a id="utilizzo_esempio_link" th:href="${LINK ESEMPIO UTILIZZO}"></a>
+									<a id="utilizzo_esempio_link" th:text="#{utilizzo}" th:href="files/${accreditamentoWrapper.utilizzoModel}"></a>
 								</div>
 							</div>
 							
 							<!-- allegato 4 (sistema informatico dedicato alla formazione in ambito sanitario) -->
-							<th:block th:include="fragments/allegati :: allegati(allegatiWrapper, sistemaInformatico, ${++counter}, null)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, sistemaInformatico, ${++counter}, null)" ></th:block>
 							<div class="row">
 								<label th:text="#{label.esempio}"
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_sistemaInformatico">esempio sistemaInformatico</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_sistemaInformatico">
-									<a id="sistemaInformatico_esempio_link" th:href="${LINK ESEMPIO SISTEMAINFORMATICO"></a>
+									<a id="sistemaInformatico_esempio_link" th:text="#{sistemaInformatico}" th:href="files/${accreditamentoWrapper.sistemaInformaticoModel}"></a>
 								</div>
 							</div>
 							
 							<!-- allegato 5 (piano di qualità) -->
-							<th:block th:include="fragments/allegati :: allegati(allegatiWrapper, pianoQualita, ${++counter}, null)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, pianoQualita, ${++counter}, null)" ></th:block>
 							<div class="row">
 								<label th:text="#{label.esempio}"
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_pianoQualita">esempio pianoQualità</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_pianoQualita">
-									<a id="pianoQualita_esempio_link" th:href="${LINK ESEMPIO PIANOQUALITÀ"></a>
+									<a id="pianoQualita_esempio_link" th:text="#{pianoQualita}" th:href="files/${accreditamentoWrapper.pianoQualitaModel}"></a>
 								</div>
 							</div>
 							
 							<!-- allegato 6 (dichiarazione del legale rappresentante) -->
-							<th:block th:include="fragments/allegati :: allegati(allegatiWrapper, dichiarazioneLegale, ${++counter}, null)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, dichiarazioneLegale, ${++counter}, null)" ></th:block>
 							<div class="row">
 								<label th:text="#{label.esempio}"
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_dichiarazioneLegale">esempio dichiarazioneLegale</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_dichiarazioneLegale">
-									<a id="dichiarazioneLegale_esempio_link" th:href="${LINK ESEMPIO DICHIARAZIONELEGALE"></a>
+									<a id="dichiarazioneLegale_esempio_link" th:text="#{dichiarazioneLegale}" th:href="files/${accreditamentoWrapper.dichiarazioneLegaleModel}"></a>
 								</div>
 							</div>
 							
