Sezione allegati work in progress

--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -224,8 +224,7 @@
 															</thead>
 															<tbody>
 																<tr>
-																	<td th:if="${accreditamentoWrapper.attoCostitutivo}"><a th:text="#{label.attoCostitutivo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/${IdALLEGATI}/edit|}"></a></td>
-																	<td th:unless="${accreditamentoWrapper.attoCostitutivo}"><a th:text="#{label.attoCostitutivo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/new|}"></a></td>
+																	<td><a th:text="#{label.attoCostitutivo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.attoCostitutivo}">
 																		<span class="fa fa-check green"></span>
@@ -235,8 +234,7 @@
 																	</td>
 																</tr>
 																<tr>
-																	<td th:if="${accreditamentoWrapper.esperienzaFormazione}"><a th:text="#{label.esperienzaFormazione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/${IdALLEGATI}/edit|}"></a></td>
-																	<td th:unless="${accreditamentoWrapper.esperienzaFormazione}"><a th:text="#{label.esperienzaFormazione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/new|}"></a></td>
+																	<td><a th:text="#{label.esperienzaFormazione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.esperienzaFormazione}">
 																		<span class="fa fa-check green"></span>
@@ -246,8 +244,7 @@
 																	</td>
 																</tr>
 																<tr>
-																	<td th:if="${accreditamentoWrapper.utilizzo}"><a th:text="#{label.utilizzo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/${IdALLEGATI}/edit|}"></a></td>
-																	<td th:unless="${accreditamentoWrapper.utilizzo}"><a th:text="#{label.utilizzo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/new|}"></a></td>
+																	<td><a th:text="#{label.utilizzo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.utilizzo}">
 																		<span class="fa fa-check green"></span>
@@ -257,8 +254,7 @@
 																	</td>
 																</tr>
 																<tr>
-																	<td th:if="${accreditamentoWrapper.sistemaInformatico}"><a th:text="#{label.sistemaInformatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/${IdALLEGATI}/edit|}"></a></td>
-																	<td th:unless="${accreditamentoWrapper.sistemaInformatico}"><a th:text="#{label.sistemaInformatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/new|}"></a></td>
+																	<td><a th:text="#{label.sistemaInformatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.sistemaInformatico}">
 																		<span class="fa fa-check green"></span>
@@ -268,8 +264,7 @@
 																	</td>
 																</tr>
 																<tr>
-																	<td th:if="${accreditamentoWrapper.pianoQualita}"><a th:text="#{label.pianoQualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/${IdALLEGATI}/edit|}"></a></td>
-																	<td th:unless="${accreditamentoWrapper.pianoQualita}"><a th:text="#{label.pianoQualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/new|}"></a></td>
+																	<td><a th:text="#{label.pianoQualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.pianoQualita}">
 																		<span class="fa fa-check green"></span>
@@ -279,8 +274,7 @@
 																	</td>
 																</tr>
 																<tr>
-																	<td th:if="${accreditamentoWrapper.dichiarazioneLegale}"><a th:text="#{label.dichiarazioneLegale}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/${IdALLEGATI}/edit|}"></a></td>
-																	<td th:unless="${accreditamentoWrapper.dichiarazioneLegale}"><a th:text="#{label.dichiarazioneLegale}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/allegati/new|}"></a></td>
+																	<td><a th:text="#{label.dichiarazioneLegale}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.dichiarazioneLegale}">
 																		<span class="fa fa-check green"></span>
