--- a/src/main/resources/templates/accreditamento/allegatiEdit.html
+++ b/src/main/resources/templates/accreditamento/allegatiEdit.html
@@ -11,15 +11,14 @@
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.allegati}">allegati</h2>
-						<a class="btn btn-primary pull-right" th:text="#{label.annulla}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}|}"></a>
+						<a class="btn btn-primary pull-right" th:text="#{label.annulla}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}|}"></a>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
-						<form id="formAccreditamento" class="form-horizontal form-label-left" th:action="@{|/accreditamento/${accreditamentoId}/dati/save|}"
+						<form id="formAccreditamento" class="form-horizontal form-label-left" th:action="@{|/accreditamento/${accreditamentoId}/allegati/save|}"
 								method="post" enctype="multipart/form-data" novalidate="novalidate">
 							
-							<input type="hidden" name="editId" th:value="${accreditamentoAllegatiWrapper.provider}" />
-							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.accreditamentoId}" /> 
+							<input type="hidden" name="editId" th:value="${accreditamentoAllegatiWrapper.accreditamentoId}" /> 
 							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.idEditabili}" />
 							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.idOffset}" />	
 							
@@ -30,7 +29,7 @@
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_attoCostitutivo">esempio attoCostitutivo</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_attoCostitutivo">
-									<a id="attoCostitutivo_esempio_link" th:text="#{attoCostitutivo}" th:href="files/${accreditamentoWrapper.attoCostitutivoModel}"></a>
+									<a id="attoCostitutivo_esempio_link" th:text="#{label.attoCostitutivo}" th:href="@{files/${accreditamentoWrapper.attoCostitutivoModel}}"></a>
 								</div>
 							</div>
 														
@@ -41,7 +40,7 @@
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_esperienzaFormazione">esempio esperienzaFormazione</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_esperienzaFormazione">
-									<a id="esperienzaFormazione_esempio_link" th:text="#{esperienzaFormazione}" th:href="files/${accreditamentoWrapper.esperienzaFormazioneModel}"></a>
+									<a id="esperienzaFormazione_esempio_link" th:text="#{label.esperienzaFormazione}" th:href="@{files/${accreditamentoWrapper.esperienzaFormazioneModel}}"></a>
 								</div>
 							</div>
 							
@@ -52,7 +51,7 @@
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_utilizzo">esempio utilizzo</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_utilizzo">
-									<a id="utilizzo_esempio_link" th:text="#{utilizzo}" th:href="files/${accreditamentoWrapper.utilizzoModel}"></a>
+									<a id="utilizzo_esempio_link" th:text="#{label.utilizzo}" th:href="@{files/${accreditamentoWrapper.utilizzoModel}}"></a>
 								</div>
 							</div>
 							
@@ -63,7 +62,7 @@
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_sistemaInformatico">esempio sistemaInformatico</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_sistemaInformatico">
-									<a id="sistemaInformatico_esempio_link" th:text="#{sistemaInformatico}" th:href="files/${accreditamentoWrapper.sistemaInformaticoModel}"></a>
+									<a id="sistemaInformatico_esempio_link" th:text="#{label.sistemaInformatico}" th:href="@{files/${accreditamentoWrapper.sistemaInformaticoModel}}"></a>
 								</div>
 							</div>
 							
@@ -74,7 +73,7 @@
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_pianoQualita">esempio pianoQualità</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_pianoQualita">
-									<a id="pianoQualita_esempio_link" th:text="#{pianoQualita}" th:href="files/${accreditamentoWrapper.pianoQualitaModel}"></a>
+									<a id="pianoQualita_esempio_link" th:text="#{label.pianoQualita}" th:href="@{files/${accreditamentoWrapper.pianoQualitaModel}}"></a>
 								</div>
 							</div>
 							
@@ -85,7 +84,7 @@
 									class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="esempio_dichiarazioneLegale">esempio dichiarazioneLegale</label>
 								<div class="col-md-4 col-sm-4 col-xs-12" id="esempio_dichiarazioneLegale">
-									<a id="dichiarazioneLegale_esempio_link" th:text="#{dichiarazioneLegale}" th:href="files/${accreditamentoWrapper.dichiarazioneLegaleModel}"></a>
+									<a id="dichiarazioneLegale_esempio_link" th:text="#{label.dichiarazioneLegale}" th:href="@{files/${accreditamentoWrapper.dichiarazioneLegaleModel}}"></a>
 								</div>
 							</div>
 							
