Fix grafico degli allegatiEdit + aggiunta label

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -136,4 +136,10 @@ table.datatable-responsive-form thead .sorting_asc:after {
 	margin-bottom: 5px;
 }
 
+.model-link {
+	float: right;
+	font-size: 14px;
+	padding-top: 10px;
+}
+
 
